Testes unitários e correções de código